# porszilo

./: .gitignore  README.md  tmp
network/: main.tex
network/misc/: setup.tex  usepackage.tex
porszilo/: CMakeLists.txt  databases  package.xml
porszilo/launch/: gazebo_only.launch  porszilo.launch  respawn.launch  world_only.launch
porszilo/maps/: map.pgm  map.yaml
porszilo/scripts/: push_a_little  reset_position
porszilo_control/: CMakeLists.txt  package.xml
porszilo_control/config/: porszilo_control.yaml
porszilo_control/launch/: porszilo_controllers.launch
porszilo_control/scripts/: hacked_controller.py
porszilo_controllers/: CMakeLists.txt  package.xml  ros_control_plugins.xml
porszilo_controllers/include/porszilo_controllers/: diff_drive_controller.h  robot.h
porszilo_controllers/src/: run_controller.cpp
porszilo_controllers/src/porszilo_controllers/: diff_drive_controller.cpp  odometry.cpp  robot.cpp  speed_limiter.cpp  utils.cpp
porszilo_description/: CMakeLists.txt  package.xml
porszilo_description/config/: porszilo.rviz
porszilo_description/urdf/: komodo2.xacro  komodo2_gazebo.xacro
porszilo_gazebo/: CMakeLists.txt  package.xml
porszilo_gazebo/macros/: camera.xacro  depth_cam.xacro  imu.xacro
porszilo_gazebo/worlds/: myworld
porszilo_navigation/: CMakeLists.txt  package.xml
porszilo_navigation/config/: amcl_params.yaml  costmap_common_params.yaml  costmap_exploration.yaml  global_costmap_params.yaml  gmapping_params.yaml  local_costmap_params.yaml  move_base_params.yaml  realsense.lua  robot_localization.yaml  rtabmap_params.yaml  ukf_params.yaml
porszilo_navigation/launch/: amcl.launch  cartographer.launch  gmapping.launch  hector_slam.launch  move_base.launch  robot_localization.launch  rtabmap.launch
porszilo_sim_interface/: CMakeLists.txt  package.xml  porszilo_sim_plugins.xml
porszilo_sim_interface/include/porszilo_sim_interface/: porszilo_sim_interface.h
porszilo_sim_interface/src/: porszilo_sim_interface.cpp
porszilo_telepresence/: CMakeLists.txt  README.html  README.md  package.xml
porszilo_telepresence/config/: porszilo.rviz
porszilo_telepresence/include/porszilo_telepresence/: telepresence.h
porszilo_telepresence/launch/: telepresence.launch
porszilo_telepresence/scripts/: .basic_node.py.swp  basic_node.py  kepre_terkep_illesztes.py  server.py
porszilo_telepresence/src/: telepresence.cpp
porszilo_telepresence/srv/: ClickedPoint.srv
porszilo_telepresence/templates/: index.html
porszilo_telepresence_v2/: CMakeLists.txt  index.js  package-lock.json  package.json  package.xml
porszilo_telepresence_v2/launch/: telepresence.launch
porszilo_telepresence_v2/scripts/: .telepresence.py.swp  server  telepresence-main.js  telepresence.py
porszilo_telepresence_v2/srv/: Click.srv  Rotate.srv
porszilo_telepresence_v2/static/: telepresence-main.js
porszilo_telepresence_v2/views/: telepresence.pug
porszilo_utils/ros_twist_mux/config/: twist_mux.yaml
porszilo_utils/ros_twist_mux/launch/: twist_mux.launch
porszilo_utils/tf_republisher/: CMakeLists.txt  package.xml
porszilo_utils/tf_republisher/include/tf_republisher/: tf_to_pose.h
porszilo_utils/tf_republisher/src/: tf_to_pose.cpp
