<?xml version="1.0"?>
<package format="2">
  <name>porszilo</name>
  <version>1.0.0</version>
  <description>The porszilo stack</description>

  <maintainer email="redvinaa@gmail.com">Vince Reda</maintainer>
	<license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <export>
  </export>
</package>
